19991011-10:04 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/rtl/classes.c
     + little change to fix Super accesses
   * source/vm/hvm.c
     + little change to fix Super accesses
   * include/extend.h
     + struct BASEARRAY new uiPrevHolders member added

19991010-23:30 GMT+1 Bruno Cantero <bruno@issnet.net>

   + source/rdd/dbcmd.c
   + source/rdd/dbf1.c
     + Added support for SET DELETED.
     * Changed default extension from .DBF and .DBT to .dbf and .dbt

   * source/rdd/dbfcdx/dbfcdx1.c
     * Changed default extension from .FPT to .fpt

   * tests/testdbf.prg
     * Now test SET DELETED command too.

   + source/rdd/dbfcdx/Makefile
     + Added missing file.

19991010-15:05 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/filesys.c
     + ISDISK() undocumented Clipper 5.3 function added.
     ! DISKCHANGE() fixed to call hb_fsChDrv() with the right parameter.
     ! hb_fsIsDrv(), hb_fsChDrv() return value fixed, since it returned the
       reverse of the proper value.
     * int types converted to USHORT for uiErrorOld variables.

19991010-14:03 GMT+1 Victor Szel <info@szelvesz.hu>
   * bin/*.bat
     + dbfcdx lib added.

19991010-13:36 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/vm/hvm.c
     ! HB_P_NOOP - Caused an infinite loop, fixed.
     % hb_vmPlus(), hb_vmMinus() - Two returns from inside removed.

19991010-13:26 GMT+1 Bruno Cantero <bruno@issnet.net>

   * include/rddapi.h
   * source/rdd/dbcmd.c
     + Added undocumented parameters:
       dbCreate( cFileName, aStruct, cRDD, lNew, cAlias, cDelimiter )
       lNew: if specified, the created file will also be opened. If .F. this will be done
             in the current workarea; if .T. this will be done in the next available.
       cAlias: Alias for the workarea.
       cDelimiter: for the DELIM driver (not implemented yet).

   * source/rdd/dbf1.c
     * SELF_OPEN(), now generate an error with retry possibility.